--- a/src/styles.css
+++ b/src/styles.css
@@ -70,8 +70,16 @@ header > nav > button {
     transition: opacity 2s ease-in-out;
 }
 
-#about-us, #times, #cafe-menu, #contact {
+#about-us, #cafe-menu, #contact {
     font-size: 2em;
+    opacity: 0;
+    transition: opacity 2s ease-in-out;
+}
+
+#times {
+    font-size: 2em;
+    opacity: 0;
+    transition: opacity 10s ease-in-out;
 }
 
 #cafe-menu > img {
